--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
-#set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+
+# Use CTRL-SPACE as leader key.
+#unbind-key C-b
+#set -g prefix 'C- '
+#bind-key 'C- ' send-prefix
 
 # reload config
 bind r source-file ~/.tmux.conf
