--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,10 @@ set -g default-terminal "xterm-256color"
 #set -g prefix 'C- '
 #bind-key 'C- ' send-prefix
 
+unbind-key C-b
+set -g prefix 'C-w'
+bind-key 'C-w' send-prefix
+
 # reload config
 bind r source-file ~/.tmux.conf
 
