--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Use CTRL-SPACE as leader key.
 #unbind-key C-b
