--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
+set -s escape-time 0
 
 # Use CTRL-SPACE as leader key.
 #unbind-key C-b
